syntax = "proto3";

package connection_settings_def.v1;

import "connection_def/v1/def.proto";

message GetConnectionSettingsRequest {
  string user_id = 1;
}

message GetConnectionSettingsResponse {
  repeated connection_def.v1.ConnectionSetting connections = 1;
}
